Fix scrollbar

--- a/client/components/Pencil/Content/Editor/NodeEditor.scss
+++ b/client/components/Pencil/Content/Editor/NodeEditor.scss
@@ -18,7 +18,6 @@
 
 .contentHolder {
   flex: 1;
-  overflow-y: scroll;
 }
 
 .toogleToolbarButton {
