--- a/client/components/Pencil/Content/View/NodeView.css
+++ b/client/components/Pencil/Content/View/NodeView.css
@@ -1,2 +1,4 @@
 .component {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
