--- a/client/components/Pencil/PencilPage.scss
+++ b/client/components/Pencil/PencilPage.scss
@@ -17,7 +17,6 @@
 }
 
 .contentPane {
-  overflow-y: auto;
   position: fixed;
   top: 0;
   bottom: 50%;
@@ -50,20 +49,6 @@
   width: auto;
 
   padding-left: 0.4rem;
-}
-
-.scrollbarVerticalThumb {
-  background-color: lightgray;
-  max-width: 3px;
-  margin-left: 3px;
-  opacity: 0.2;
-}
-
-.scrollbarHorizontalThumb {
-  background-color: lightgray;
-  max-height: 3px;
-  margin-top: 3px;
-  opacity: 0.2;
 }
 
 .collapsedTree {
